# hytale-reversing

./: .gitignore  Cargo.toml  README.md
aot-experiments/: Cargo.toml  README.md
aot-experiments/python/: hytale.py
aot-experiments/src/: binary.rs  error.rs  main.rs
aot-experiments/src/binary/headers/: mt.rs  rtr.rs
aot-experiments/src/embedded_meta/: collections.rs  flags.rs  handles.rs  mod.rs  utils.rs
aot-experiments/src/ida/: mod.rs
aot-experiments/src/native_format/: mod.rs  parser.rs  reader.rs
docs/nativeaot/: README.md
sigs/: README.md
sigs/LBOTLBOT/: LBOTLBOT.slnx
sigs/LBOTLBOT/LBOTLBOT/: LBOTLBOT.csproj  Program.cs
src/: binary.rs  main.rs
src/embedded_meta/: collections.rs  handles.rs
src/native_format/: hashtable.rs  reader.rs  ref_table.rs
