[package]
name = "aot-blobs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
binary_rw = "4.1.0"
idalib = "0.7.2"
num_enum = "0.7.5"
paste = "1.0.15"
patternscan = "1.2.0"
pelite = "0.10.0"
thiserror = "2.0.17"

[build-dependencies]
idalib-build = "0.7.2"

[patch.crates-io]
idalib = { path = "../idalib/idalib" }
idalib-build = { path = "../idalib/idalib-build" }
